--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<a href="https://github.com/davidquesada/BluePrinter">Source on GitHub</a>
 	</li>
 	<li>
-	Coming Soon to an App Store near you!
+    <a href="https://itunes.apple.com/us/app/blueprinter/id842763354?mt=8">View on the App Store</a>
 	</li>
 	</ul>
 <hr />
@@ -69,7 +69,7 @@
 	<a href="https://github.com/davidquesada/MNutrition">Source on GitHub</a>
 	</li>
 	<li>
-	<a href="https://itunes.apple.com/us/app/bluemenu/id807298775?mt=8">App Page on the App Store</a>
+	<a href="https://itunes.apple.com/us/app/bluemenu/id807298775?mt=8">View on the App Store</a>
 	</li>
 	</ul>
 <hr />
